--- a/index.html
+++ b/index.html
@@ -2,178 +2,101 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Gather & Game Café – Menu</title>
+<title>Gather & Game Café</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #2b1a0e;
+}
+.overlay {
+  background: #f5ecd8;
+  min-height: 100vh;
+  padding: 20px;
+}
+h1 { text-align: center; }
+.menu-item {
+  background: #fff8ee;
+  border: 1px solid #c2a476;
+  border-radius: 8px;
+  padding: 12px;
+  margin-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+.menu-info h3 { margin: 0; }
+.desc { font-size: 13px; font-style: italic; }
+.qty-control {
+  display: flex;
+  gap: 6px;
+  margin-top: 6px;
+}
+.qty-control button {
+  padding: 4px 10px;
+}
+.cart-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: green;
+  color: white;
+  padding: 14px 26px;
+  border-radius: 30px;
+  text-decoration: none;
+}
+</style>
 </head>
 
 <body>
+<div class="overlay">
 
-<a href="cart.html" class="cart-btn">
-  🛒 Go to Cart <span id="cart-count" class="cart-count">0</span>
-</a>
+<h1>🎲 Gather Game Café</h1>
 
-<h1>🎲 Gather & Game Café Menu</h1>
+<!-- ITEM -->
+<div class="menu-item">
+  <div class="menu-info">
+    <h3>Masala Omelette</h3>
+    <span class="desc">Sunny side-up or over easy</span>
+    <p>₹89</p>
 
-<div class="tabs" id="tabs"></div>
-<div id="menu" class="menu-container"></div>
-
-<script>
-  
-const menuData = {
-  "🍳 Eggs & Breads": [
-   { name: "Fried Eggs (2 eggs)", price: 49, desc: "Sunny-side up eggs cooked fresh." },
-{ name: "Boiled Eggs (2 eggs)", price: 49, desc: "Perfectly boiled eggs with light seasoning." },
-{ name: "Masala Omelette", price: 89, desc: "Omelette with onions, tomatoes, and Indian spices." },
-{ name: "Cheese Omelette", price: 99, desc: "Fluffy omelette filled with melted cheese." },
-{ name: "Egg Bhurji", price: 99, desc: "Scrambled eggs cooked desi-style." },
-{ name: "Mushroom Cheese Omelette", price: 109, desc: "Omelette with sautéed mushrooms and cheese." },
-{ name: "Vegetable Masala Omelette", price: 109, desc: "Egg omelette loaded with fresh vegetables." },
-{ name: "Chicken Omelette", price: 119, desc: "Protein-packed omelette with chicken chunks." },
-{ name: "Anda Bhurji Pav", price: 119, desc: "Spicy egg bhurji served with buttered pav." },
-{ name: "Butter Bread (2 pieces)", price: 39, desc: "Toasted bread with butter." },
-{ name: "Garlic Bread", price: 79, desc: "Crispy garlic-flavored bread." }
-],
-  "🔥 Starters": [
-    { name: "Dice Roll Fries", price: 149, desc: "Classic golden fries, crispy and addictive." },
-{ name: "Checkmate Cheese Balls", price: 179, desc: "Crunchy outside with molten cheese inside." },
-{ name: "Knight’s Nachos (Veg)", price: 199, desc: "Nachos loaded with cheese, salsa, and veggies." },
-{ name: "Knight’s Nachos (Chicken)", price: 229, desc: "Nachos topped with spicy chicken and cheese." },
-{ name: "Queen’s Garlic Bread", price: 169, desc: "Herb garlic bread with buttery finish." },
-{ name: "Meeple Masala Fries", price: 159, desc: "Fries tossed in bold Indian masala." },
-{ name: "Pawn Popcorn", price: 129, desc: "Light, crispy salted popcorn." },
-{ name: "Chicken Popcorn", price: 159, desc: "Juicy fried chicken bites." },
-{ name: "Peri-Peri Fries", price: 169, desc: "Spicy peri-peri seasoned fries." }
-  ],
-  "🍔 Burgers & Sandwiches": [
-{ name: "Veg Burger", price: 179, desc: "Grilled veg patty with lettuce and sauce." },
-{ name: "Paneer Tikka Burger", price: 199, desc: "Paneer tikka patty with mint mayo." },
-{ name: "Chicken Burger", price: 199, desc: "Juicy grilled chicken patty." },
-{ name: "Crispy Chicken Burger", price: 229, desc: "Crunchy fried chicken with creamy sauce." },
-{ name: "Veg Grilled Sandwich", price: 169, desc: "Grilled sandwich stuffed with veggies." },
-{ name: "Paneer Grilled Sandwich", price: 179, desc: "Spiced paneer grilled sandwich." },
-{ name: "Chicken Club Sandwich", price: 209, desc: "Triple-layer chicken sandwich." },
-{ name: "Corn & Cheese Sandwich", price: 169, desc: "Creamy corn and cheese filling." },
-{ name: "Chocolate Sandwich", price: 189, desc: "Sweet chocolate-filled sandwich." }
-  ],
-  "🍕 Perfectly Played Pizzas": [
-{ name: "Margherita Pizza", price: 219, desc: "Classic tomato and mozzarella pizza." },
-{ name: "Vegetarian Delight Pizza", price: 269, desc: "Loaded with fresh vegetables and cheese." },
-{ name: "Paneer Tikka Pizza", price: 299, desc: "Paneer tikka, capsicum, onion, and cheese." },
-{ name: "Mushroom Cheese Feast Pizza", price: 249, desc: "Cheesy pizza topped with mushrooms." },
-{ name: "Chicken Tikka Pizza", price: 319, desc: "Smoky chicken tikka with cheese." },
-{ name: "Peri-Peri Chicken Pizza", price: 329, desc: "Spicy peri-peri chicken delight." },
-{ name: "Pepperoni Pizza", price: 339, desc: "Classic pepperoni slices and cheese." },
-{ name: "Chicken Overload Pizza", price: 359, desc: "Extra chicken, extra cheese." }
-],
-"🍜 Mindful Maggi": [
-{ name: "Classic Masala Maggi", price: 139, desc: "Classic Maggi with signature masala." },
-{ name: "Peri-Peri Maggi", price: 149, desc: "Spicy peri-peri flavored Maggi." },
-{ name: "Paneer Tikka Maggi", price: 159, desc: "Maggi mixed with paneer tikka." },
-{ name: "Cheesy Maggi", price: 159, desc: "Creamy cheesy Maggi." },
-{ name: "Chicken Maggi", price: 179, desc: "Maggi cooked with chicken pieces." },
-{ name: "Chicken Keema Maggi", price: 179, desc: "Flavorful Maggi with chicken keema." }
-],
-  "🍝 Checkmate Pastas": [
-{ name: "Classic White Sauce Pasta", price: 179, desc: "Creamy white sauce pasta." },
-{ name: "Classic Red Sauce Pasta", price: 169, desc: "Tangy tomato-based pasta." },
-{ name: "Pink Sauce Pasta", price: 189, desc: "Blend of red and white sauce." },
-{ name: "White Sauce Chicken Pasta", price: 229, desc: "Creamy pasta with chicken." },
-{ name: "Red Sauce Chicken Pasta", price: 219, desc: "Spicy red sauce pasta with chicken." },
-{ name: "Pink Sauce Chicken Pasta", price: 239, desc: "Rich pink sauce with chicken." },
-{ name: "Arrabbiata Pasta", price: 179, desc: "Spicy garlic chili pasta." },
-{ name: "Cheesy Garlic Pasta", price: 189, desc: "Garlic pasta loaded with cheese." }
-],
-  "☕ Drinks": [
-    { name: "Masala Chai", price: 49, desc: "Traditional Indian spiced tea." },
-{ name: "Elaichi Chai", price: 49, desc: "Cardamom infused aromatic tea." },
-{ name: "Ginger Tea", price: 49, desc: "Strong ginger flavored tea." },
-{ name: "Filter Coffee", price: 49, desc: "South Indian style filter coffee." },
-{ name: "Hot Chocolate", price: 99, desc: "Rich creamy hot chocolate." },
-{ name: "Lemon Honey Tea", price: 49, desc: "Soothing lemon tea with honey." },
-{ name: "Iced Coffee", price: 109, desc: "Cold brewed coffee with ice." },
-{ name: "Iced Mocha", price: 129, desc: "Cold coffee blended with chocolate." },
-{ name: "Cold Cocoa", price: 129, desc: "Chilled chocolate beverage." },
-{ name: "Fresh Lime Soda", price: 69, desc: "Refreshing lime soda (sweet or salt)." },
-{ name: "Water", price: "MRP", desc: "Packaged drinking water." }
-  ],
-"🍰 Castle Desserts": [
-{ name: "Molten Choco Lava Cake", price: 179, desc: "Warm chocolate cake with molten center." },
-{ name: "Chocolate Sundae", price: 199, desc: "Ice cream topped with chocolate sauce." },
-{ name: "Tres Leches Cake", price: 179, desc: "Soft cake soaked in three-milk blend." },
-{ name: "Brownie with Ice Cream", price: 189, desc: "Warm brownie served with vanilla ice cream." },
-{ name: "Oreo Sundae", price: 199, desc: "Creamy sundae with Oreo crumbles." },
-{ name: "Hot Chocolate Pudding", price: 199, desc: "Rich baked chocolate pudding." },
-{ name: "New York Cheesecake", price: 199, desc: "Classic creamy cheesecake." },
-{ name: "Gulab Jamun Ice Cream", price: 169, desc: "Gulab jamun served with ice cream." }
-],
-"🎯 Combos": [
-{ name: "Pawn Power Combo", price: 179, desc: "Popcorn + beverage combo." },
-{ name: "Dice & Dip Combo", price: 249, desc: "Fries with dip and drink." },
-{ name: "Checkmate Veg Combo", price: 349, desc: "Veg starter + fries + drink." },
-{ name: "Knight Non-Veg Combo", price: 399, desc: "Chicken starter + fries + drink." },
-{ name: "Duo Dice Combo", price: 599, desc: "Perfect sharing combo for two." },
-{ name: "Meeple Platter Combo", price: 649, desc: "Assorted starters with drinks." },
-{ name: "Burger Play Combo", price: 499, desc: "Burger, fries, and beverage." },
-{ name: "Sandwich Strategy Combo", price: 459, desc: "Sandwich, fries, and beverage." },
-{ name: "Big Game Combo", price: 699, desc: "Pizza, starter, and drinks." },
-{ name: "Chess Challenge Combo", price: 699, desc: "Mocktails, popcorn, and desserts." }
-]
-};
-
-const tabs = document.getElementById("tabs");
-const menu = document.getElementById("menu");
-let idx = 0;
-
-for (const section in menuData) {
-  const tab = document.createElement("button");
-  tab.className = "tab-btn";
-  tab.textContent = section;
-  tab.dataset.tab = idx;
-  tabs.appendChild(tab);
-
-  const content = document.createElement("div");
-  content.className = "tab-content";
-  content.dataset.tab = idx;
-
-  content.innerHTML = menuData[section].map(item => `
-    <div class="menu-item">
-      <div>
-        <h3>${item.name}</h3>
-        <div class="desc">${item.desc}</div>
-        <div class="price">${item.price}</div>
-      </div>
-      <div class="actions">
-        <button class="add-btn"
-          onclick="addToCartFromUI(this,'${item.name}',${isNaN(item.price) ? 0 : item.price})">
-          Add
-        </button>
-        <div class="qty-control" style="display:none">
-          <button onclick="changeQty(this,-1)">−</button>
-          <span class="qty-value">1</span>
-          <button onclick="changeQty(this,1)">+</button>
-        </div>
-      </div>
+    <div class="qty-control">
+      <button type="button" onclick="changeQty(this,-1)">−</button>
+      <span class="qty-value">1</span>
+      <button type="button" onclick="changeQty(this,1)">+</button>
     </div>
-  `).join("");
+  </div>
 
-  menu.appendChild(content);
-  idx++;
-}
+  <button type="button"
+    onclick="addToCartFromUI(this,'Masala Omelette',89)">
+    Add
+  </button>
+</div>
 
-document.querySelectorAll(".tab-btn")[0].classList.add("active");
-document.querySelectorAll(".tab-content")[0].classList.add("active");
+<!-- ITEM -->
+<div class="menu-item">
+  <div class="menu-info">
+    <h3>Filter Coffee</h3>
+    <p>₹49</p>
 
-document.querySelectorAll(".tab-btn").forEach(btn => {
-  btn.onclick = () => {
-    document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
-    document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
-    btn.classList.add("active");
-    document.querySelector(`.tab-content[data-tab="${btn.dataset.tab}"]`).classList.add("active");
-  };
-});
-</script>
+    <div class="qty-control">
+      <button type="button" onclick="changeQty(this,-1)">−</button>
+      <span class="qty-value">1</span>
+      <button type="button" onclick="changeQty(this,1)">+</button>
+    </div>
+  </div>
 
+  <button type="button"
+    onclick="addToCartFromUI(this,'Filter Coffee',49)">
+    Add
+  </button>
+</div>
+
+<a href="cart.html" class="cart-btn">🛒 Go to Cart</a>
+
+</div>
 <script src="script.js"></script>
 </body>
 </html>
