--- a/admin.html
+++ b/admin.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Admin POS</title>
+<title>Kitchen Orders</title>
 <style>
-body { font-family: Arial; background:#f2f2f2; }
-.table-box {
-  background:#fff;
-  padding:14px;
-  margin:14px;
-  border:2px solid #333;
-}
-.invoice {
-  border:1px solid #000;
-  padding:10px;
-  margin-top:10px;
-}
-.line {
-  display:flex;
-  justify-content:space-between;
-}
-button, select {
-  margin-top:6px;
-  padding:6px 10px;
-}
-@media print {
-  body * { visibility:hidden; }
-  .invoice, .invoice * { visibility:visible; }
+body { font-family: Arial; background: #f5f5f5; }
+.order-box {
+  background: white;
+  border: 2px solid #333;
+  padding: 12px;
+  margin: 12px;
 }
 </style>
 </head>
 <body>
 
-<h1>🍽️ Kitchen & Billing</h1>
+<h1>Kitchen Orders</h1>
 <div id="orders"></div>
-
-<h2>📊 Reports</h2>
-<button onclick="exportDailySummaryExcel()">📅 Day-wise Excel</button>
-<button onclick="exportMonthlyExcel()">📆 Monthly Excel</button>
-<button onclick="loadMonthly()">📊 Monthly Summary (Screen)</button>
-<div id="report"></div>
 
 <script src="script.js"></script>
 </body>
 </html>
-
