--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ for (const section in menuData) {
         <div class="price">${item.price}</div>
       </div>
       <div class="actions">
-        <button class="add-btn" onclick="addToCartFromUI(this)">Add</button>
+        <button class="add-btn" onclick="addItem(this)">Add</button>
         <div class="qty-control">
           <button onclick="updateQty(this,-1)">−</button>
           <span class="qty-value">1</span>
@@ -341,6 +341,59 @@ document.querySelectorAll(".tab-btn").forEach(btn => {
     document.querySelector(`.tab-content[data-tab="${btn.dataset.tab}"]`).classList.add("active");
   };
 });
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+updateCartCount();
+
+function addItem(btn) {
+  const card = btn.closest(".menu-item");
+  const name = card.querySelector("h3").innerText;
+
+  let priceText = card.querySelector(".price").innerText;
+  let price = isNaN(parseInt(priceText)) ? 0 : parseInt(priceText);
+
+  btn.style.display = "none";
+  card.querySelector(".qty-control").style.display = "flex";
+
+  const found = cart.find(i => i.name === name);
+  if (found) {
+    found.qty += 1;
+  } else {
+    cart.push({ name, price, qty: 1 });
+  }
+
+  saveCart();
+}
+
+function updateQty(btn, delta) {
+  const qtySpan = btn.parentElement.querySelector(".qty-value");
+  const card = btn.closest(".menu-item");
+  const name = card.querySelector("h3").innerText;
+  const addBtn = card.querySelector(".add-btn");
+
+  let qty = parseInt(qtySpan.innerText) + delta;
+
+  if (qty <= 0) {
+    btn.parentElement.style.display = "none";
+    addBtn.style.display = "inline-block";
+    cart = cart.filter(i => i.name !== name);
+  } else {
+    qtySpan.innerText = qty;
+    const item = cart.find(i => i.name === name);
+    if (item) item.qty = qty;
+  }
+
+  saveCart();
+}
+
+function saveCart() {
+  localStorage.setItem("cart", JSON.stringify(cart));
+  updateCartCount();
+}
+
+function updateCartCount() {
+  const count = cart.reduce((sum, i) => sum + i.qty, 0);
+  document.getElementById("cart-count").innerText = count;
+}
 
   if (qty <= 0) {
     btn.parentElement.style.display = "none";
@@ -356,4 +409,5 @@ document.querySelectorAll(".tab-btn").forEach(btn => {
 
 </body>
 </html>
+
 
