--- a/cart.html
+++ b/cart.html
@@ -139,10 +139,11 @@ document.addEventListener("DOMContentLoaded", function () {
      3. BACK TO MENU (TABLE SAFE)
   ================================= */
   document.getElementById("backBtn").href =
-    `menu.html?table=${tableNo}`;
+    `index.html?table=${tableNo}`;
 
 });
 </script>
 
 </body>
 </html>
+
