--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@ button, a {
 
   <div class="actions">
     <a id="backBtn" class="back-btn">⬅ Back to Menu</a>
-    <button class="checkout-btn">Proceed to Pay</button>
+    <button class="checkout-btn">Place Order</button>
   </div>
 </div>
 
@@ -146,4 +146,5 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
