--- a/cart.html
+++ b/cart.html
@@ -139,7 +139,7 @@ document.addEventListener("DOMContentLoaded", function () {
      3. BACK TO MENU
   ================================= */
   document.getElementById("backBtn").href =
-    `menu.html?table=${tableNo}`;
+    `index.html?table=${tableNo}`;
 
   /* ================================
      4. PLACE ORDER (KITCHEN)
@@ -175,7 +175,7 @@ document.addEventListener("DOMContentLoaded", function () {
     alert("Order placed successfully!");
 
     // Optional: redirect back to menu
-    window.location.href = `menu.html?table=${tableNo}`;
+    window.location.href = `index.html?table=${tableNo}`;
   };
 
 });
@@ -183,3 +183,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
