--- a/index.html
+++ b/index.html
@@ -8,204 +8,67 @@
 <style>
 body {
   font-family: Arial, sans-serif;
+  background: #f6f1e7;
   padding: 20px;
   margin: 0;
-  background: #f6f1e7;
+}
+
+h1 {
+  text-align: center;
 }
 
 .menu-item {
   background: #fff;
   padding: 15px;
-  margin-bottom: 10px;
-  border-radius: 8px;
+  margin-bottom: 12px;
+  border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.actions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .add-btn {
-  background: green;
-  color: white;
+  background: #3fa55b;
+  color: #fff;
   border: none;
-  padding: 8px 14px;
+  padding: 8px 16px;
+  border-radius: 20px;
   cursor: pointer;
 }
 
 .qty-control {
   display: none;
+  align-items: center;
+  gap: 10px;
 }
+
+.qty-control button {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: none;
+  background: #7b4b2a;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 .cart-btn {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: green;
+  background: #3fa55b;
   color: #fff;
-  padding: 12px 18px;
-  border-radius: 20px;
+  padding: 14px 22px;
+  border-radius: 999px;
   text-decoration: none;
-}
-</style>
-</head>
-
-<body>
-
-<a id="cartLink" class="cart-btn">
-  🛒 Go to Cart <span id="cart-count">0</span>
-</a>
-
-<h1>Menu</h1>
-
-<div id="menu"></div>
-
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-
-  /* ================================
-     1. GET TABLE NUMBER FROM URL
-     Example: menu.html?table=5
-  ================================= */
-const params = new URLSearchParams(window.location.search);
-const tableNo = params.get("table") || "default";
-
-// Pass table number to cart page
-const cartLink = document.getElementById("cartLink");
-if (cartLink) {
-  cartLink.href = `cart.html?table=${tableNo}`;
+  font-weight: bold;
 }
 
-  /* ================================
-     2. MENU DATA (SAMPLE)
-     (Replace later with full menu)
-  ================================= */
-  const menuData = [
-    { name: "Masala Chai", price: 49 },
-    { name: "Coffee", price: 59 }
-  ];
-
-  /* ================================
-     3. DOM REFERENCES
-  ================================= */
-  const menu = document.getElementById("menu");
-  const cartList = document.getElementById("cart-list"); // debug (optional)
-  const cartCountEl = document.getElementById("cart-count");
-
-  /* ================================
-     4. LOAD CART (TABLE-WISE)
-  ================================= */
-  let cart = JSON.parse(localStorage.getItem(CART_KEY)) || {};
-
-  /* ================================
-     5. RENDER MENU
-  ================================= */
-  menu.innerHTML = menuData.map(item => `
-    <div class="menu-item" data-name="${item.name}">
-      <div>
-        <strong>${item.name}</strong><br>
-        ₹${item.price}
-      </div>
-
-      <div class="actions">
-        <button class="add-btn"
-          onclick="showQty(this, '${item.name}', ${item.price})">
-          Add
-        </button>
-
-        <div class="qty-control">
-          <button onclick="changeQty(this, -1, '${item.name}')">-</button>
-          <span class="qty-value">1</span>
-          <button onclick="changeQty(this, 1, '${item.name}')">+</button>
-        </div>
-      </div>
-    </div>
-  `).join("");
-
-  /* ================================
-     6. HELPERS
-  ================================= */
-  function saveCart() {
-    localStorage.setItem(CART_KEY, JSON.stringify(cart));
-  }
-
-  function updateCartCount() {
-    let total = 0;
-    for (const item in cart) {
-      total += cart[item].qty;
-    }
-    cartCountEl.innerText = total;
-  }
-
-  function renderCartDebug() {
-    if (!cartList) return;
-    cartList.innerHTML = "";
-    for (const name in cart) {
-      const li = document.createElement("li");
-      li.innerText = `${name} × ${cart[name].qty}`;
-      cartList.appendChild(li);
-    }
-  }
-
-  function restoreUIFromCart() {
-    for (const name in cart) {
-      const card = document.querySelector(`.menu-item[data-name="${name}"]`);
-      if (!card) continue;
-
-      const addBtn = card.querySelector(".add-btn");
-      const qtyControl = card.querySelector(".qty-control");
-      const qtySpan = card.querySelector(".qty-value");
-
-      addBtn.style.display = "none";
-      qtyControl.style.display = "flex";
-      qtySpan.innerText = cart[name].qty;
-    }
-    updateCartCount();
-    renderCartDebug();
-  }
-
-  /* ================================
-     7. UI ACTIONS
-  ================================= */
-  window.showQty = function (btn, name, price) {
-    btn.style.display = "none";
-    btn.parentElement.querySelector(".qty-control").style.display = "flex";
-
-    cart[name] = { price, qty: 1 };
-    saveCart();
-    updateCartCount();
-    renderCartDebug();
-  };
-
-  window.changeQty = function (btn, delta, name) {
-    const qtySpan = btn.parentElement.querySelector(".qty-value");
-    let qty = parseInt(qtySpan.innerText) + delta;
-
-    if (qty <= 0) {
-      delete cart[name];
-      btn.parentElement.style.display = "none";
-      btn.closest(".actions").querySelector(".add-btn").style.display = "inline-block";
-      qtySpan.innerText = 1;
-    } else {
-      qtySpan.innerText = qty;
-      cart[name].qty = qty;
-    }
-
-    saveCart();
-    updateCartCount();
-    renderCartDebug();
-  };
-
-  /* ================================
-     8. RESTORE ON PAGE LOAD
-  ================================= */
-  restoreUIFromCart();
-
-});
-</script>
-
-</body>
-</html>
-
-
-
-
-
-
-
+.cart-count
